# quad-src-git

./: README.md
custom_service/: CMakeLists.txt  package.xml
custom_service/srv/: IdSw.srv  IkSw.srv  PassingSw.srv
ik/: CMakeLists.txt  package.xml
ik/src/: a.out  dog_legik  dog_legik.cpp  ik_sol.cpp  joint_state.py
quadruped_description/: CMakeLists.txt  package.xml
quadruped_description/config/: marker.rviz  my_controllers.yaml
quadruped_description/launch/: display.launch.py  gazebo.launch.py  rsp.launch.py
quadruped_description/meshes/: base_link.stl  link1_1.stl  link2_v1_1.stl  link3_1.stl
quadruped_description/scripts/: plot.py  static_tf.py  test.py  traj_bezier.cpp  traj_safe.cpp
quadruped_description/urdf/: bot_urdf_hii.gazebo  bot_urdf_hii.trans  bot_urdf_hii.urdf  bot_urdf_hii.xacro  bot_urdf_hii_1.xacro  materials.xacro  ros2_control.xacro
quadruped_description/worlds/: model.config  model.sdf
